force-app/main/default/objects/Renewal_Run__c/Renewal_Run__c.object-meta.xml
<CustomObject>
    <label>Renewal Run</label>
    <pluralLabel>Renewal Runs</pluralLabel>
    <description>The Renewal Run object logs one execution of the renewal reconciliation batch. It captures Scope Parameters, Start Time, and End Time, plus Records Evaluated, Renewals Created, Records Skipped, and Records Failed counts; Skip Reason Breakdown and Failure Detail explain outcomes. Commonly used for nightly reconciliation runs and FY26 backfill audits.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Renewal Run Number</label>
        <type>AutoNumber</type>
        <displayFormat>RR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>