force-app/main/default/objects/Renewal_Run__c/fields/Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Dry_Run__c</fullName>
    <label>Dry Run</label>
    <description>True when this run only reported what it would create, without inserting any renewal opportunities.</description>
    <inlineHelpText>Checked if this was a report-only run - no renewals were actually created.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>