force-app/main/default/objects/Renewal_Run__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <description>When this reconciliation run finished.</description>
    <inlineHelpText>Timestamp the batch job finished. Blank while the run is still in progress.</inlineHelpText>
    <type>DateTime</type>
</CustomField>