force-app/main/default/objects/Renewal_Run__c/fields/Records_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Records_Evaluated__c</fullName>
    <label>Records Evaluated</label>
    <description>Count of activated orders in scope that this run evaluated for renewal eligibility.</description>
    <inlineHelpText>Total orders the run looked at, before deciding which ones needed a renewal.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>