force-app/main/default/objects/Renewal_Run__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <label>Records Failed</label>
    <description>Count of orders that were eligible for renewal but failed to produce one - a real problem to investigate, unlike a skip. See Failure Detail.</description>
    <inlineHelpText>Orders that should have renewed but did not, due to an error. Needs follow-up.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>