force-app/main/default/objects/Renewal_Run__c/fields/Records_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Records_Skipped__c</fullName>
    <label>Records Skipped</label>
    <description>Count of evaluated orders this run deliberately did not renew - already renewed, or genuinely not renewal-eligible. See Skip Reason Breakdown for why.</description>
    <inlineHelpText>Orders the run looked at but correctly left alone. Not an error - see the reason breakdown.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>