force-app/main/default/objects/Renewal_Run__c/fields/Renewals_Created__c.field-meta.xml
<CustomField>
    <fullName>Renewals_Created__c</fullName>
    <label>Renewals Created</label>
    <description>Count of renewal opportunities this run actually created (always 0 for a dry run).</description>
    <inlineHelpText>How many new renewal opportunities this run produced.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>