force-app/main/default/objects/Renewal_Run__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <description>When this reconciliation run started.</description>
    <inlineHelpText>Timestamp the batch job started.</inlineHelpText>
    <type>DateTime</type>
</CustomField>