force-app/main/default/objects/Renewal_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Outcome of this run - whether it finished cleanly, finished with some record-level failures, or crashed entirely.</description>
    <inlineHelpText>Running while in progress; Completed if every eligible record succeeded; Completed with Errors if some failed; Failed if the run itself crashed.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
                <default>true</default>
                <label>Running</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>